# Home-tasks

./: .gitignore
AbstractFactory/AbstractFactory/: InterfaceFactory.cpp  InterfaceFactory.h
AbstractFactory/FactoryTest/: pch.h  test.cpp
Any/: Any.sln
Any/Any/: Any.cpp  Any.h  Any.vcxproj  Any.vcxproj.filters  Source.cpp  TypeContainer.h
CustomVector/: 10k_tests_benchmark.txt  CustomVector.sln
CustomVector/CustomVector/: CustomVector.vcxproj  CustomVector.vcxproj.filters  Source.cpp  Vector.h
EManager_CMake/: CMakeLists.txt
EManager_CMake/app/: CMakeLists.txt
EManager_CMake/app/src/: main.cpp
EManager_CMake/lib/: CMakeLists.txt
EManager_CMake/lib/EManagerLibrary/: CMakeLists.txt
EManager_CMake/lib/EManagerLibrary/include/EManager/: EventManager.h  Observer.h  Subject.h
EManager_CMake/lib/EManagerLibrary/src/: CMakeLists.txt  Event.cpp  EventManager.cpp  Observer.cpp  ScopedConnection.cpp  Subject.cpp
EManager_CMake/test/: CMakeLists.txt
EManager_CMake/test/basic_tests/: CMakeLists.txt
EManager_CMake/tests/: CMakeLists.txt
EManager_CMake/tests/basic_tests/: CMakeLists.txt  test.cpp
EventManager/: EventManager.sln
EventManager/EManagerGTest/: EManagerGTest.vcxproj  test.cpp
EventManager/EManagerTest/: Source.cpp
EventManager/EventManager/: EventManager.cpp  EventManager.h  EventManager.vcxproj  EventManager.vcxproj.filters  Observer.cpp  Observer.h  ScopedConnection.cpp  ScopedConnection.h  Subject.cpp  Subject.h
FileSystem/: FileSystem.sln
FileSystem/FileSystem/: Allocator.cpp  Allocator.h  DataStructs.h  FileSystem.vcxproj  FileSystem.vcxproj.filters  FileSystemModel.h  Header.h  Source.cpp
FunctionTemplate/: Source.cpp  function.h
KDTree/: KDTree.sln
KDTree/KDTree/: KDTree.vcxproj  KDTree.vcxproj.filters
KDTreeImpl/: KDPoint.h  KDRectangle.h  KDTree.h  KDVector.h  Source.cpp  TestFunctions.cpp  TestFunctions.h
Matrix/: Matrix.sln
Matrix/Matrix/: Matrix.h  Matrix.vcxproj  Matrix.vcxproj.filters  MatrixHelperFunctions.h  MatrixWalker.h  Source.cpp
MultiThreadTesting/: MultiThreadTesting.sln
MultiThreadTesting/MultiThreadTesting/: MultiThreadTesting.vcxproj  MultiThreadTesting.vcxproj.filters
MultiThreadTesting/ThreadPool/: ThreadPool.vcxproj  ThreadPool.vcxproj.filters
ScopedCallback/: Function.h  ScopedCallback.h  Source.cpp
SharedPointer/: SharedControlBlock.h  SharedPointer.h  Source.cpp  WeakPointer.h  shared_ptr.h
SharedPtr/: SharedPtr.sln
SharedPtr/SharedPtr/: SharedPtr.vcxproj  SharedPtr.vcxproj.filters
TDD/: TDD.sln
TDDTask/: Source.cpp
TDDTask/StringCalculatorLib/: StringCalculator.cpp  StringCalculator.h
TDDTask/TDDMain/: TDDMain.cpp
TDDTask/UnitTest1/: unittest1.cpp
Test/IncrementingWithMutex/: CustomStruct.h  ParallelLogger.cpp  ParallelLogger.h  Source.cpp  log.txt
Test/MultiThread/: Source.cpp
Test/Test/: Source.cpp  file.txt
Test/ThreadPool/: Source.cpp  ThreadPool.cpp  ThreadPool.h
Variant/: Variant.sln
Variant/Variant/: Source.cpp  Variant.h  Variant.vcxproj  Variant.vcxproj.filters  VariantHelperFunctions.h  VariantPrivate.h
